--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -403,7 +403,7 @@ Besonderer Dank geht an:
 FireFly Studios für die Stronghold-Serie
 Udwin, da sein YouTube-Channel mich an Stronghold erinnert hat
 Lolasik011 für die russische Übersetzung
-Radek2019 für die polnische Übersetzung
+Lutel & Radek2019 für die polnische Übersetzung
 Evrey für seine AI-Burgen"
 }
 
