--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -131,13 +131,6 @@ aiv_evreyimproved
 	"Evrey's улучшенные замки AI"
 }
 
-aiv_evreyimproved_descr
-{
-	"Предоставляет AI-Лордам новые и улучшенные замки, основанные на стиле ванили.
-	
-Создано Evrey ([ref2])."
-}
-
 ui_uninstall
 {
 	"Удаление"
@@ -372,43 +365,10 @@ ai_attackwave_descr
 а также стены, которые уже атакованы одной единицей."
 }
 
-ui_welcometext
-{
-"Это неофициальный патч для Stronghold Crusader.
-Проект доступен с открытым исходным кодом через [ref].
-
-Любая версия Crusader потенциально поддерживается, но поскольку изменения, &
-выведенный со Steam версией 1.41, могут возникнуть несовместимости. Настройка &
-затем отобразит сообщения об ошибках. Установленная версия исправления показана в &
-нижнем левом углу главного меню.
-
-Перед любыми изменениями будут созданы резервные файлы. Они могут быть восстановлены через &
-кнопку «Удалить» или вручную.
-
-
-На этом этапе я хотел бы поблагодарить сообщество Stronghold за поддержку &
-меня так восторженно.
-
-Особая благодарность:
-FireFly Studios за создания серии Stronghold
-Udwin, потому что его канал YouTube напомнил мне о Stronghold
-Lolasik011 за Русский перевод
-Lutel & Radek2019 за Польский перевод
-Evrey за свои замки AI"
-}
-
 aiv_evreypitch
 {
 	"Улучшеные ванильные замки Evrey [PitchNeeded редактировано]"
 }
-
-aiv_evreypitch_descr
-{
-	"Расширяет «улучшеные ванильные замки Evrey», добавляя мангонелей и &
-баллист к башням Вазира, Кабана, Низара и Эмира. Отредактировано &
-PitchNeeded «."
-}
-
 
 
 
@@ -589,4 +549,48 @@ ai_attacktarget_weakest_descr
 	"С этим параметром все лорды AI выберут свою следующую цель атаки. &
 Это предотвращает переключение войск во время штурма замка, а также отправку &
 их мимо замков других врагов, чтобы собрать."
+}
+
+
+
+// =====================
+//        2.08
+// =====================
+
+
+
+ui_welcometext
+{
+"Это неофициальный патч для Stronghold Crusader.
+Проект доступен с открытым исходным кодом через [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
+
+Любая версия Crusader потенциально поддерживается, но поскольку изменения, &
+выведенный со Steam версией 1.41, могут возникнуть несовместимости. Настройка &
+затем отобразит сообщения об ошибках. Установленная версия исправления показана в &
+нижнем левом углу главного меню.Перед любыми изменениями будут созданы резервные файлы. &
+Они могут быть восстановлены через кнопку «Удалить» или вручную.
+
+На этом этапе я хотел бы поблагодарить сообщество Stronghold за поддержку &
+меня так восторженно.
+
+Особая благодарность:
+[FireFly Studios](https://fireflyworlds.com/) за создания серии Stronghold
+[Udwin (YouTube)](https://www.youtube.com/user/UdwinLP), because he made me remember Stronghold
+[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) & [Radek2019](https://github.com/Radek2019) за Польский перевод
+[Lolasik011](https://github.com/Lolasik011) за Русский перевод
+[Evrey](https://github.com/Evrey) за свои замки AI"
+}
+
+aiv_evreyimproved_descr
+{
+	"Предоставляет AI-Лордам новые и улучшенные замки, основанные на стиле ванили.
+	
+[Создано Evrey](https://github.com/Evrey/SHC_AIV/)"
+}
+
+aiv_evreypitch_descr
+{
+	"Расширяет «улучшеные ванильные замки Evrey», добавляя мангонелей и &
+баллист к башням Вазира, Кабана, Низара и Эмира. Отредактировано &
+[PitchNeeded](https://github.com/PitchNeeded) «."
 }
