--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -131,13 +131,6 @@ aiv_evreyimproved
 	"Evrey's improved AI castles"
 }
 
-aiv_evreyimproved_descr
-{
-	"Grants the AI-Lords new and improved castles, based on the vanilla style.
-	
-Created by Evrey ([ref2])."
-}
-
 ui_uninstall
 {
 	"Uninstall"
@@ -373,41 +366,9 @@ This option makes units also attack civil and fortification buildings, as &
 well as wall parts which are already being attacked by one unit."
 }
 
-ui_welcometext
-{
-"This is an unofficial patch for Stronghold Crusader.
-The project ist available as open-source via [ref].
-
-Any Crusader version is potentially supported, but since the changes where &
-derived with the 1.41 Steam-Version, incompatibilities may appear. The setup &
-will then show error messages. The installed patch version is shown in the &
-bottom left corner of the main menu.
-
-Before any changes, backup files will be created. These can be restored via &
-the 'Uninstall'-button or manually.
-
-
-At this point I would like to thank the Stronghold community for supporting &
-me so enthusiastically.
-
-Special thanks go to:
-FireFly Studios for the creation of the Stronghold series
-Udwin, because his YouTube-Channel reminded me of Stronghold
-Lolasik011 for the russian translation
-Lutel & Radek2019 for the polish translation
-Evrey for his AI castles"
-}
-
 aiv_evreypitch
 {
 	"Evrey's fixed vanilla castles [PitchNeeded Edit]"
-}
-
-aiv_evreypitch_descr
-{
-	"Extends 'Evrey's fixed vanilla castles', by adding mangonels and &
-ballistae to the towers of Wazir, Pig, Nizar and Emir. Edited by &
-PitchNeeded."
 }
 
 
@@ -585,4 +546,54 @@ ai_attacktarget_weakest_descr
 	"With this setting, all AI lords will chose their next attack target in &
 the same way. This prevents troops switching targets during a castle assault &
 as well as sending them past other enemies' castles to gather."
+}
+
+
+
+
+
+
+
+
+
+// ====================
+//        2.08
+// ====================
+
+
+
+ui_welcometext
+{
+"This is an unofficial patch for Stronghold Crusader.
+The project ist available as open-source on [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
+
+Any Crusader version is potentially supported, but since the changes where &
+derived with the 1.41 Steam-Version, incompatibilities may appear. The setup &
+will then show error messages. The installed patch version is shown in the &
+bottom left corner of the main menu. Before any changes, backup files will &
+be created. These can be restored via the 'Uninstall'-button or manually.
+
+At this point I would like to thank the Stronghold community for supporting &
+me so enthusiastically.
+
+Special thanks go to:
+[FireFly Studios](https://fireflyworlds.com/) for the creation of the Stronghold series
+[Udwin (YouTube)](https://www.youtube.com/user/UdwinLP), because he made me remember Stronghold
+[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) & [Radek2019](https://github.com/Radek2019) for the polish translation
+[Lolasik011](https://github.com/Lolasik011) for the russian translation
+[Evrey](https://github.com/Evrey) for his AI castles"
+}
+
+aiv_evreyimproved_descr
+{
+	"Grants the AI-Lords new and improved castles, based on the vanilla style.
+	
+[Created by Evrey](https://github.com/Evrey/SHC_AIV/)"
+}
+
+aiv_evreypitch_descr
+{
+	"Extends 'Evrey's fixed vanilla castles', by adding mangonels and &
+ballistae to the towers of Wazir, Pig, Nizar and Emir. Edited by &
+[PitchNeeded](https://github.com/PitchNeeded)."
 }
