--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -132,13 +132,6 @@ aiv_evreyimproved
 	"Evreys verbesserte KI-Burgen"
 }
 
-aiv_evreyimproved_descr
-{
-	"Gibt den KI-Lords neue verbesserte Burgen, angelehnt an den Vanilla-Stil.
-	
-Erstellt von Evrey ([ref2])."
-}
-
 ui_uninstall
 {
 	"Deinstallieren"
@@ -382,43 +375,10 @@ Befestigungsanlagen an, sowie Mauerstücke die bereits von einem Angreifer &
 besetzt sind."
 }
 
-ui_welcometext
-{
-"Dies ist ein inoffizieller Patch für Stronghold Crusader.
-Das Projekt ist Open-Source unter [ref] zu finden.
-
-Potenziell wird jede Crusader-Version unterstützt, die Änderungen wurden &
-allerdings anhand der 1.41 Steam-Version hergeleitet. Im Falle von Versions-&
-Inkompatibilität wird der Setup Fehlermeldungen zeigen. Die installierte Patch-&
-Version wird unten links im Hauptmenü angezeigt.
-
-Vor jeglichen Änderungen werden Backup-Dateien erstellt, die über den &
-'Deinstallieren'-Button oder manuell wiederhergestellt werden können.
-
-
-An dieser Stelle möchte ich der Stronghold-Community danken die mich in &
-diesem Projekt so enthusiastisch unterstützt hat.
-
-Besonderer Dank geht an:
-FireFly Studios für die Stronghold-Serie
-Udwin, da sein YouTube-Channel mich an Stronghold erinnert hat
-Lolasik011 für die russische Übersetzung
-Lutel & Radek2019 für die polnische Übersetzung
-Evrey für seine AI-Burgen"
-}
-
 aiv_evreypitch
 {
 	"Evreys gefixte Vanilla-Burgen [PitchNeeded Edit]"
 }
-
-aiv_evreypitch_descr
-{
-	"Erweitert 'Evreys gefixte Vanilla-Burgen', indem den Türmen von &
-Wazir, Schwein, Nizar und Emir Mangen und Ballisten hinzugefügt werden. &
-Editiert von PitchNeeded."
-}
-
 
 
 
@@ -586,4 +546,55 @@ ai_attacktarget_weakest_descr
 das Ziel für ihren nächsten Angriff. Dies verhindert, dass die Truppen mittem &
 im laufenden Angriff umschwenken oder an Gegnerburgen vorbeigeschickt werden &
 zum Sammeln."
+}
+
+
+
+
+
+
+
+
+
+
+
+// ================
+//      2.08
+// ================
+
+ui_welcometext
+{
+"Dies ist ein inoffizieller Patch für Stronghold Crusader.
+Das Projekt ist Open-Source auf [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch) zu finden.
+
+Potenziell wird jede Crusader-Version unterstützt, die Änderungen wurden &
+allerdings anhand der 1.41 Steam-Version hergeleitet. Im Falle von Versions-&
+Inkompatibilität wird der Setup Fehlermeldungen zeigen. Die installierte Patch-&
+Version wird unten links im Hauptmenü angezeigt. Vor jeglichen Änderungen werden &
+Backup-Dateien erstellt, die über den 'Deinstallieren'-Button oder manuell &
+wiederhergestellt werden können.
+
+An dieser Stelle möchte ich der Stronghold-Community danken die mich in &
+diesem Projekt so enthusiastisch unterstützt hat.
+
+Besonderer Dank geht an:
+FireFly Studios für die Stronghold-Serie
+[Udwin (YouTube)](https://www.youtube.com/user/UdwinLP), da er mich Stronghold hat erinnern lassen
+[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) & [Radek2019](https://github.com/Radek2019) für die polnische Übersetzung
+[Lolasik011](https://github.com/Lolasik011) für die russische Übersetzung
+[Evrey](https://github.com/Evrey) für seine AI-Burgen"
+}
+
+aiv_evreyimproved_descr
+{
+	"Gibt den KI-Lords neue verbesserte Burgen, angelehnt an den Vanilla-Stil.
+
+[Erstellt von Evrey](https://github.com/Evrey/SHC_AIV/)"
+}
+
+aiv_evreypitch_descr
+{
+	"Erweitert 'Evreys gefixte Vanilla-Burgen', indem den Türmen von &
+Wazir, Schwein, Nizar und Emir Mangen und Ballisten hinzugefügt werden. &
+Editiert von [PitchNeeded](https://github.com/PitchNeeded)."
 }
