--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -606,7 +606,7 @@ ai_assaultswitch_descr
 {
 	"Лорды AI, которые иногда нападают на самого могущественного или самого слабого врага &
 они переключают свою цель в середине продолжающегося нападения и отправляют свои войска &
-в другой замок. Это предотвращается с помощью этой настройки, как только начался штурм,
+в другой замок. Это предотвращается с помощью этой настройки, как только начался штурм, &
 т. е. на этапе сбора войск перед замком, изменения все еще могут произойти."
 }
 
@@ -620,7 +620,7 @@ ai_rebuild
 ai_rebuild_descr
 {
 	"AI будет ремонтировать руины башни, слегка поврежденные стены, а также &
-уничтожит инженерные и туннельные гильдии и нефтеперерабатывающие платформы, & место сбора которых
+уничтожит инженерные и туннельные гильдии и нефтеперерабатывающие платформы, место сбора которых &
 все еще существует. Кроме того, AI теперь может строить на платформе сбора &
 карьеров."
 }
